Ipad alignment issue fix for react member app

--- a/docroot/react/src/views/secure/visit/conference/conference.less
+++ b/docroot/react/src/views/secure/visit/conference/conference.less
@@ -270,6 +270,8 @@
             position: fixed;
             top: 0;
             bottom: 0;
+            left: 0;
+            right: 0;
 
             .video-conference {
                 .controls-bar {
